# haros_tutorials

./: CHANGELOG.md  README.md  hpl.yaml  minimal.yaml  my_index.yaml  perf.yaml  project.yaml  queries.yaml
docker/: Dockerfile  README.md  build.sh  catkin.sh  configs.yaml  run.sh
docs/: README.md
exercises/: README.md  behaviour_ex1.diff  behaviour_ex2.diff  code_quality_ex2.diff
exercises/sec2-code-quality/: README.md  ex1.diff  ex3.diff
exercises/sec3-architecture/: README.md  ex1.diff  ex2.diff
exercises/sec4-behaviour/: README.md  ex2.diff
fictibot/: CMakeLists.txt
fictibot_controller/: CMakeLists.txt  package.xml
fictibot_controller/include/fictibot_controller/: random_controller.h
fictibot_controller/launch/: dual_bots.launch  multiplexer.launch  name_collision.launch  params.launch  rosparam.launch  standalone.launch  test_rosparam.launch
fictibot_controller/src/: controller_node.cpp  random_controller.cpp
fictibot_drivers/: CMakeLists.txt  package.xml
fictibot_drivers/include/fictibot_drivers/: motor_manager.h  sensor_manager.h
fictibot_drivers/src/: driver_node.cpp  motor_manager.cpp  sensor_manager.cpp
fictibot_launch/: CMakeLists.txt
fictibot_launch/launch/: double_conditional.launch  double_remap.launch  dual_bots.launch  machine_test.launch  minimal.launch  missing_node.launch  missing_remap.launch  multiplexer.launch  param_include.launch  safe_random_walker.launch  test_rosparam.launch  type_check.launch
fictibot_msgs/: CMakeLists.txt  package.xml
fictibot_msgs/msg/: Custom.msg
fictibot_multiplex/: CMakeLists.txt  package.xml
fictibot_multiplex/include/fictibot_multiplex/: trichannel_multiplex.hpp
fictibot_multiplex/launch/: trichannel_base.launch
fictibot_multiplex/src/: multiplex_node.cpp  trichannel_multiplex.cpp
fictibot_random_controller/src/: random_controller.cpp
fictibot_safety_controller/: package.xml
fictibot_safety_controller/launch/: standalone.launch
fictibot_safety_controller/src/: safety_controller.cpp
mini2/: CMakeLists.txt  package.xml
mini2/launch/: mini.launch
mini2/src/: mini.cpp
minimal_example/: CMakeLists.txt  package.xml
minimal_example/launch/: machine_test.launch  missing_node.launch  missing_remap.launch  name_collision.launch  params.launch
minimal_example/src/: subscriber.cpp
minimal_example/srv/: GetCounter.srv
projects/: fictibot.yaml  hpl.yaml  minimal.yaml  outdated-perf.yaml  perf.yaml  quality.yaml  queries.yaml
scripts/: fictibot.sh  hpl.sh  iros21_tutorial.sh  minimal.sh  perf.sh  queries.sh  run_tests.sh
src/fictibot/: package.xml
src/fictibot_drivers/: CMakeLists.txt  package.xml
src/fictibot_drivers/launch/: standalone.launch
src/fictibot_drivers/src/: driver_node.cpp  sensor_manager.cpp
src/fictibot_launch/: CMakeLists.txt  package.xml
src/fictibot_launch/launch/: minimal.launch  multiplexer.launch
src/fictibot_msgs/: CMakeLists.txt  package.xml
src/fictibot_msgs/msg/: BumperEvent.msg  VelocityCommand.msg  WheelDropEvent.msg
src/fictibot_multiplex/: package.xml
src/fictibot_multiplex/src/: multiplex_node.cpp
src/fictibot_random_controller/: CMakeLists.txt  package.xml
src/fictibot_random_controller/include/fictibot_random_controller/: random_controller.h
src/fictibot_random_controller/launch/: standalone.launch
src/fictibot_random_controller/src/: controller_node.cpp
src/fictibot_safety_controller/: CMakeLists.txt  package.xml
src/fictibot_safety_controller/include/fictibot_safety_controller/: safety_controller.h
src/fictibot_safety_controller/src/: controller_node.cpp  safety_controller.cpp
src/minimal_example/: package.xml
src/minimal_example/launch/: double_remap.launch  minimal.launch  param_include.launch  rosparam.launch  test_rosparam.launch
src/minimal_example/src/: publisher.cpp
src/minimal_python/: CMakeLists.txt  package.xml  setup.py
src/minimal_python/launch/: minimal.launch
src/minimal_python/nodes/: publisher  subscriber
src/minimal_python/src/minimal_python/: publisher.py  subscriber.py
