<?xml version="1.0"?>
<package>
  <name>fictibot_drivers</name>
  <version>0.1.0</version>
  <description>The fictibot_drivers package</description>

  <maintainer email="andre@todo.todo">Andre Santos</maintainer>
  <license>MIT</license>
  <author email="andre@todo.todo">Andre Santos</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>