<?xml version="1.0"?>
<package>
  <name>minimal_example</name>
  <version>0.1.0</version>
  <description>The minimal_example package</description>

  <maintainer email="andre@todo.todo">Andre Santos</maintainer>
  <license>MIT</license>
  <author email="andre@todo.todo">Andre Santos</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>