<?xml version="1.0"?>
<package format="2">
  <name>minimal_python</name>
  <version>0.0.0</version>
  <description>The minimal_python package</description>

  <maintainer email="haros.framework@gmail.com">André Santos</maintainer>
  <license>MIT</license>
  <author email="haros.framework@gmail.com">André Santos</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>minimal_example</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>minimal_example</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>minimal_example</exec_depend>

  <export>
  </export>
</package>
